<resources>
    <string name="app_name">Achados E Perdidos</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="txtFrase">Encontre documentos perdidos de forma simples e rápida.</string>
    <string name="txtRodape">2015 STG - Todos os direitos reservados.</string>
    <string name="txtCadastroDeDados">Cadastre Seus Dados</string>
    <string name="hint_nome">Nome:</string>
    <string name="hint_cpf">CPF:</string>
    <string name="hint_email">E-mail:</string>
    <string name="hint_dt_nasc">Data de Nascimento</string>
    <string name="hint_conf_email">Confirme o E-mail:</string>
    <string name="hint_senha">Senha:</string>
    <string name="hint_conf_senha">Confirme sua senha:</string>
    <string name="txt_cadastrar">Cadastrar</string>
    <string name="txtVoltar">Voltar</string>
    <string name="txtEntrar">Entrar</string>
    <string name="txtPerdeu">Perdeu?</string>
    <string name="txtAchou">Achou?</string>
    <string name="txtDocEncontrado">Documento encontrado</string>
    <string name="txtDocPerdido">Documento Perdido</string>
    <string name="txtCriarCadastro">Crie seu cadastro</string>
    <string name="txtFacebook">Facebook</string>
    <string name="txtGplus">Google+</string>
    <string name="hint_user">Usuário</string>
    <string name="txtIrParaOMapa">Ir para o mapa</string>
    <string name="title_activity_achou_maps">Map</string>
    <string name="Hint_txtTextDeixarDoc">Descreva onde deixará o documento</string>
    <string name="hint_NumDoc">Número do documento</string>
    <string name="hint_NomeDoc">Nome do documento</string>
    <string name="title_activity_maps">Map</string>
</resources>
