<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d9e0e7">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="130dp"
            android:layout_height="70dp"
            android:layout_gravity="left"
            android:src="@drawable/logo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtCadastroDeDados"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#00acac"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtNome"
            android:hint="@string/hint_nome" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/edtCPF"
            android:hint="@string/hint_cpf"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/edtNasc"
            android:hint="@string/hint_dt_nasc"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/edtEmail"
            android:hint="@string/hint_email"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/edtConfEmail"
            android:hint="@string/hint_conf_email"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edtSenha"
            android:hint="@string/hint_senha"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edtConfSenha"
            android:hint="@string/hint_conf_senha"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/btnCadastrar"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/txt_cadastrar"
            android:textSize="20sp"
            android:onClick="Cadastrar"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/btnVoltarCad"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/txtVoltar"
            android:textSize="20sp"
            android:onClick="VoltarCad"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

</LinearLayout>