<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d9e0e7">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="left"
            android:src="@drawable/logo"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/edtNome"
            android:hint="@string/hint_user" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edtSenha"
            android:hint="@string/hint_senha"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/btnCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtEntrar"
            android:textSize="25sp"
            android:onClick="Acessar"
            android:background="#73c98e"
            android:textColor="#ffffff" />


        <Button
            android:id="@+id/btnCriarCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtCriarCadastro"
            android:textSize="20sp"
            android:onClick="CriarCadastro"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>




</LinearLayout>