<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ActivityTelaInicial"
    android:orientation="vertical"
    android:background="#d9e0e7">


    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/txtFrase"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txtFrase"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#00acac"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/btnEntrar"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/txtEntrar"
            android:textSize="30sp"
            android:onClick="Entrar"
            android:layout_gravity="center_horizontal"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

    <TextView
        android:id="@+id/txtRodape"
        android:layout_marginTop="20dp"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtRodape"
        android:textStyle="bold"
        android:textColor="#000080"/>
</LinearLayout>


